# skills_hub

./: .gitignore  .vercelignore  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json
.github/workflows/: daily-skill-sync.yml
desktop-app/: README.md  index.html  package-lock.json  package.json  vite.config.ts
desktop-app/src/: App.tsx  index.css
desktop-app/src-tauri/: Cargo.toml  create-icon.ps1  tauri.conf.json
desktop-app/src-tauri/capabilities/: default.json
desktop-app/src-tauri/icons/: icon.icns
desktop-app/src-tauri/src/: main.rs
prisma/: schema.prisma  seed.ts
prisma/migrations/20260415233000_init/: migration.sql
prisma/migrations/20260417050000_add_skill_pagination_indexes/: migration.sql
scripts/: import-skillful-db.ts  import-skills-sh.ts  import-skills.ts  scrape-skills.ts
src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx  robots.ts  sitemap.ts
src/app/actions/: favorite.ts  register.ts  submit.ts
src/app/agents/: page.tsx
src/app/app/: page.tsx
src/components/: BillingPortalButton.tsx  CompatibilityMatrix.tsx  FavoriteButton.tsx  Header.tsx  InstallButton.tsx  LogoutButton.tsx  PlatformFilter.tsx  ProfileDesktopAccessCard.tsx  SessionProvider.tsx  SkillCard.tsx  TypewriterTitle.tsx
src/data/: agents.ts  imported-skills.ts  mcp-servers.ts  scraped-skills.ts  skills.ts
src/lib/: auth.ts  device-pairing.ts  email.ts  jwt.ts  prisma.ts  search.ts  session.ts  site-url.ts  skills-directory.ts  skills-ecosystem.ts  skills.ts  stripe.ts  unified-search.ts
src/types/: index.ts
(+31 files in other folders)
