[package]
name = "universal-skills-hub-desktop"
version = "1.0.0"
description = "Universal Skills Hub - Desktop App for installing AI agent skills"
authors = ["Universal Skills Hub"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
